# wlmatchbox

./: .gitignore  README.md  config.h.in  meson.build  meson.options
.github/workflows/: build.yml
include/wlmatchapp/: display.h  seat.h  symbols.h  toplevel.h  window.h
protocols/: meson.build
src/app-panel/: main.c  meson.build
src/libwlmatchapp/: buffer-internal.h  buffer.c  display.c  meson.build  seat-internal.h  seat.c  toplevel.c  window-internal.h  window.c
src/wlmatchbox/: keyboard.c  keyboard.h  main.c  meson.build  output.c  output.h  popup.c  popup.h  server.c  server.h  toplevel.c  toplevel.h  util.h
src/xdg-app-chooser/: main.c  meson.build
