libwlmatchapp = library('wlmatchapp',
  'buffer.c',
  'display.c',
  'seat.c',
  'toplevel.c',
  'window.c',
  protocols_code['xdg-shell'],
  protocols_client_header['xdg-shell'],
  include_directories: includes,
  dependencies: [
    cairo,
    gio_2_0,
    libm_dep,
    wl_client,
    wl_cursor,
  ],
  gnu_symbol_visibility: 'hidden',
  c_args: '-DLIBWLMATCHAPP_BUILD=1',
)
