wlmatchbox = executable('wlmatchbox',
  'keyboard.c',
  'main.c',
  'output.c',
  'popup.c',
  'server.c',
  'toplevel.c',
  config_h,
  protocols_code['xdg-shell'],
  protocols_server_header['xdg-shell'],
  dependencies: [wlroots, wl_server, xkbcommon],
  include_directories: config_inc,
  install: true,
)
